// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests the LmsTable renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LmsTable
    lmsSubmissions={Object {}}
    loading={true}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <div
          className="lms-table"
>
          <Table>
                    <Row
                              header={true}
                    >
                              <Cell
                                        Key={0}
                                        addedClass=""
                                        title=""
                              >
                                        Course Id
                              </Cell>
                              <Cell
                                        Key={1}
                                        addedClass=""
                                        title=""
                              >
                                        Output Name
                              </Cell>
                              <Cell
                                        Key={2}
                                        addedClass=""
                                        title=""
                              >
                                        Due Date
                              </Cell>
                              <Cell
                                        Key={3}
                                        addedClass=""
                                        title=""
                              >
                                        Submission Date
                              </Cell>
                              <Cell
                                        Key={4}
                                        addedClass=""
                                        title=""
                              >
                                        Review Date
                              </Cell>
                              <Cell
                                        Key={5}
                                        addedClass=""
                                        title=""
                              >
                                        Score
                              </Cell>
                    </Row>
          </Table>
</div>,
        <Loader />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Table>
            <Row
                        header={true}
            >
                        <Cell
                                    Key={0}
                                    addedClass=""
                                    title=""
                        >
                                    Course Id
                        </Cell>
                        <Cell
                                    Key={1}
                                    addedClass=""
                                    title=""
                        >
                                    Output Name
                        </Cell>
                        <Cell
                                    Key={2}
                                    addedClass=""
                                    title=""
                        >
                                    Due Date
                        </Cell>
                        <Cell
                                    Key={3}
                                    addedClass=""
                                    title=""
                        >
                                    Submission Date
                        </Cell>
                        <Cell
                                    Key={4}
                                    addedClass=""
                                    title=""
                        >
                                    Review Date
                        </Cell>
                        <Cell
                                    Key={5}
                                    addedClass=""
                                    title=""
                        >
                                    Score
                        </Cell>
            </Row>
</Table>,
          "className": "lms-table",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <Row
                header={true}
>
                <Cell
                                Key={0}
                                addedClass=""
                                title=""
                >
                                Course Id
                </Cell>
                <Cell
                                Key={1}
                                addedClass=""
                                title=""
                >
                                Output Name
                </Cell>
                <Cell
                                Key={2}
                                addedClass=""
                                title=""
                >
                                Due Date
                </Cell>
                <Cell
                                Key={3}
                                addedClass=""
                                title=""
                >
                                Submission Date
                </Cell>
                <Cell
                                Key={4}
                                addedClass=""
                                title=""
                >
                                Review Date
                </Cell>
                <Cell
                                Key={5}
                                addedClass=""
                                title=""
                >
                                Score
                </Cell>
</Row>,
              undefined,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  <Cell
                    Key={0}
                    addedClass=""
                    title=""
>
                    Course Id
</Cell>,
                  <Cell
                    Key={1}
                    addedClass=""
                    title=""
>
                    Output Name
</Cell>,
                  <Cell
                    Key={2}
                    addedClass=""
                    title=""
>
                    Due Date
</Cell>,
                  <Cell
                    Key={3}
                    addedClass=""
                    title=""
>
                    Submission Date
</Cell>,
                  <Cell
                    Key={4}
                    addedClass=""
                    title=""
>
                    Review Date
</Cell>,
                  <Cell
                    Key={5}
                    addedClass=""
                    title=""
>
                    Score
</Cell>,
                ],
                "header": true,
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "Key": 0,
                    "addedClass": "",
                    "children": "Course Id",
                    "title": "",
                  },
                  "ref": null,
                  "rendered": "Course Id",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "Key": 1,
                    "addedClass": "",
                    "children": "Output Name",
                    "title": "",
                  },
                  "ref": null,
                  "rendered": "Output Name",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "Key": 2,
                    "addedClass": "",
                    "children": "Due Date",
                    "title": "",
                  },
                  "ref": null,
                  "rendered": "Due Date",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "Key": 3,
                    "addedClass": "",
                    "children": "Submission Date",
                    "title": "",
                  },
                  "ref": null,
                  "rendered": "Submission Date",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "Key": 4,
                    "addedClass": "",
                    "children": "Review Date",
                    "title": "",
                  },
                  "ref": null,
                  "rendered": "Review Date",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "Key": 5,
                    "addedClass": "",
                    "children": "Score",
                    "title": "",
                  },
                  "ref": null,
                  "rendered": "Score",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            undefined,
          ],
          "type": [Function],
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <div
            className="lms-table"
>
            <Table>
                        <Row
                                    header={true}
                        >
                                    <Cell
                                                Key={0}
                                                addedClass=""
                                                title=""
                                    >
                                                Course Id
                                    </Cell>
                                    <Cell
                                                Key={1}
                                                addedClass=""
                                                title=""
                                    >
                                                Output Name
                                    </Cell>
                                    <Cell
                                                Key={2}
                                                addedClass=""
                                                title=""
                                    >
                                                Due Date
                                    </Cell>
                                    <Cell
                                                Key={3}
                                                addedClass=""
                                                title=""
                                    >
                                                Submission Date
                                    </Cell>
                                    <Cell
                                                Key={4}
                                                addedClass=""
                                                title=""
                                    >
                                                Review Date
                                    </Cell>
                                    <Cell
                                                Key={5}
                                                addedClass=""
                                                title=""
                                    >
                                                Score
                                    </Cell>
                        </Row>
            </Table>
</div>,
          <Loader />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Table>
              <Row
                            header={true}
              >
                            <Cell
                                          Key={0}
                                          addedClass=""
                                          title=""
                            >
                                          Course Id
                            </Cell>
                            <Cell
                                          Key={1}
                                          addedClass=""
                                          title=""
                            >
                                          Output Name
                            </Cell>
                            <Cell
                                          Key={2}
                                          addedClass=""
                                          title=""
                            >
                                          Due Date
                            </Cell>
                            <Cell
                                          Key={3}
                                          addedClass=""
                                          title=""
                            >
                                          Submission Date
                            </Cell>
                            <Cell
                                          Key={4}
                                          addedClass=""
                                          title=""
                            >
                                          Review Date
                            </Cell>
                            <Cell
                                          Key={5}
                                          addedClass=""
                                          title=""
                            >
                                          Score
                            </Cell>
              </Row>
</Table>,
            "className": "lms-table",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <Row
                  header={true}
>
                  <Cell
                                    Key={0}
                                    addedClass=""
                                    title=""
                  >
                                    Course Id
                  </Cell>
                  <Cell
                                    Key={1}
                                    addedClass=""
                                    title=""
                  >
                                    Output Name
                  </Cell>
                  <Cell
                                    Key={2}
                                    addedClass=""
                                    title=""
                  >
                                    Due Date
                  </Cell>
                  <Cell
                                    Key={3}
                                    addedClass=""
                                    title=""
                  >
                                    Submission Date
                  </Cell>
                  <Cell
                                    Key={4}
                                    addedClass=""
                                    title=""
                  >
                                    Review Date
                  </Cell>
                  <Cell
                                    Key={5}
                                    addedClass=""
                                    title=""
                  >
                                    Score
                  </Cell>
</Row>,
                undefined,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": Array [
                    <Cell
                      Key={0}
                      addedClass=""
                      title=""
>
                      Course Id
</Cell>,
                    <Cell
                      Key={1}
                      addedClass=""
                      title=""
>
                      Output Name
</Cell>,
                    <Cell
                      Key={2}
                      addedClass=""
                      title=""
>
                      Due Date
</Cell>,
                    <Cell
                      Key={3}
                      addedClass=""
                      title=""
>
                      Submission Date
</Cell>,
                    <Cell
                      Key={4}
                      addedClass=""
                      title=""
>
                      Review Date
</Cell>,
                    <Cell
                      Key={5}
                      addedClass=""
                      title=""
>
                      Score
</Cell>,
                  ],
                  "header": true,
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "Key": 0,
                      "addedClass": "",
                      "children": "Course Id",
                      "title": "",
                    },
                    "ref": null,
                    "rendered": "Course Id",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "Key": 1,
                      "addedClass": "",
                      "children": "Output Name",
                      "title": "",
                    },
                    "ref": null,
                    "rendered": "Output Name",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "Key": 2,
                      "addedClass": "",
                      "children": "Due Date",
                      "title": "",
                    },
                    "ref": null,
                    "rendered": "Due Date",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "Key": 3,
                      "addedClass": "",
                      "children": "Submission Date",
                      "title": "",
                    },
                    "ref": null,
                    "rendered": "Submission Date",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "Key": 4,
                      "addedClass": "",
                      "children": "Review Date",
                      "title": "",
                    },
                    "ref": null,
                    "rendered": "Review Date",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "Key": 5,
                      "addedClass": "",
                      "children": "Score",
                      "title": "",
                    },
                    "ref": null,
                    "rendered": "Score",
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              undefined,
            ],
            "type": [Function],
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`tests the LmsTable renders correctly 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LmsTable
    lmsSubmissions={
        Object {
            "data": Array [],
          }
    }
    loading={false}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "customStyle": Object {},
      "message": "There's currently no LMS data for this fellow",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "customStyle": Object {},
        "message": "There's currently no LMS data for this fellow",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`tests the LmsTable renders correctly 3`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LmsTable
    lmsSubmissions=""
    loading={true}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <div
          className="lms-table"
>
          <Table>
                    <Row
                              header={true}
                    >
                              <Cell
                                        Key={0}
                                        addedClass=""
                                        title=""
                              >
                                        Course Id
                              </Cell>
                              <Cell
                                        Key={1}
                                        addedClass=""
                                        title=""
                              >
                                        Output Name
                              </Cell>
                              <Cell
                                        Key={2}
                                        addedClass=""
                                        title=""
                              >
                                        Due Date
                              </Cell>
                              <Cell
                                        Key={3}
                                        addedClass=""
                                        title=""
                              >
                                        Submission Date
                              </Cell>
                              <Cell
                                        Key={4}
                                        addedClass=""
                                        title=""
                              >
                                        Review Date
                              </Cell>
                              <Cell
                                        Key={5}
                                        addedClass=""
                                        title=""
                              >
                                        Score
                              </Cell>
                    </Row>
          </Table>
</div>,
        <Loader />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Table>
            <Row
                        header={true}
            >
                        <Cell
                                    Key={0}
                                    addedClass=""
                                    title=""
                        >
                                    Course Id
                        </Cell>
                        <Cell
                                    Key={1}
                                    addedClass=""
                                    title=""
                        >
                                    Output Name
                        </Cell>
                        <Cell
                                    Key={2}
                                    addedClass=""
                                    title=""
                        >
                                    Due Date
                        </Cell>
                        <Cell
                                    Key={3}
                                    addedClass=""
                                    title=""
                        >
                                    Submission Date
                        </Cell>
                        <Cell
                                    Key={4}
                                    addedClass=""
                                    title=""
                        >
                                    Review Date
                        </Cell>
                        <Cell
                                    Key={5}
                                    addedClass=""
                                    title=""
                        >
                                    Score
                        </Cell>
            </Row>
</Table>,
          "className": "lms-table",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <Row
                header={true}
>
                <Cell
                                Key={0}
                                addedClass=""
                                title=""
                >
                                Course Id
                </Cell>
                <Cell
                                Key={1}
                                addedClass=""
                                title=""
                >
                                Output Name
                </Cell>
                <Cell
                                Key={2}
                                addedClass=""
                                title=""
                >
                                Due Date
                </Cell>
                <Cell
                                Key={3}
                                addedClass=""
                                title=""
                >
                                Submission Date
                </Cell>
                <Cell
                                Key={4}
                                addedClass=""
                                title=""
                >
                                Review Date
                </Cell>
                <Cell
                                Key={5}
                                addedClass=""
                                title=""
                >
                                Score
                </Cell>
</Row>,
              undefined,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  <Cell
                    Key={0}
                    addedClass=""
                    title=""
>
                    Course Id
</Cell>,
                  <Cell
                    Key={1}
                    addedClass=""
                    title=""
>
                    Output Name
</Cell>,
                  <Cell
                    Key={2}
                    addedClass=""
                    title=""
>
                    Due Date
</Cell>,
                  <Cell
                    Key={3}
                    addedClass=""
                    title=""
>
                    Submission Date
</Cell>,
                  <Cell
                    Key={4}
                    addedClass=""
                    title=""
>
                    Review Date
</Cell>,
                  <Cell
                    Key={5}
                    addedClass=""
                    title=""
>
                    Score
</Cell>,
                ],
                "header": true,
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "Key": 0,
                    "addedClass": "",
                    "children": "Course Id",
                    "title": "",
                  },
                  "ref": null,
                  "rendered": "Course Id",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "Key": 1,
                    "addedClass": "",
                    "children": "Output Name",
                    "title": "",
                  },
                  "ref": null,
                  "rendered": "Output Name",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "Key": 2,
                    "addedClass": "",
                    "children": "Due Date",
                    "title": "",
                  },
                  "ref": null,
                  "rendered": "Due Date",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "Key": 3,
                    "addedClass": "",
                    "children": "Submission Date",
                    "title": "",
                  },
                  "ref": null,
                  "rendered": "Submission Date",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "Key": 4,
                    "addedClass": "",
                    "children": "Review Date",
                    "title": "",
                  },
                  "ref": null,
                  "rendered": "Review Date",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "Key": 5,
                    "addedClass": "",
                    "children": "Score",
                    "title": "",
                  },
                  "ref": null,
                  "rendered": "Score",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            undefined,
          ],
          "type": [Function],
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <div
            className="lms-table"
>
            <Table>
                        <Row
                                    header={true}
                        >
                                    <Cell
                                                Key={0}
                                                addedClass=""
                                                title=""
                                    >
                                                Course Id
                                    </Cell>
                                    <Cell
                                                Key={1}
                                                addedClass=""
                                                title=""
                                    >
                                                Output Name
                                    </Cell>
                                    <Cell
                                                Key={2}
                                                addedClass=""
                                                title=""
                                    >
                                                Due Date
                                    </Cell>
                                    <Cell
                                                Key={3}
                                                addedClass=""
                                                title=""
                                    >
                                                Submission Date
                                    </Cell>
                                    <Cell
                                                Key={4}
                                                addedClass=""
                                                title=""
                                    >
                                                Review Date
                                    </Cell>
                                    <Cell
                                                Key={5}
                                                addedClass=""
                                                title=""
                                    >
                                                Score
                                    </Cell>
                        </Row>
            </Table>
</div>,
          <Loader />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Table>
              <Row
                            header={true}
              >
                            <Cell
                                          Key={0}
                                          addedClass=""
                                          title=""
                            >
                                          Course Id
                            </Cell>
                            <Cell
                                          Key={1}
                                          addedClass=""
                                          title=""
                            >
                                          Output Name
                            </Cell>
                            <Cell
                                          Key={2}
                                          addedClass=""
                                          title=""
                            >
                                          Due Date
                            </Cell>
                            <Cell
                                          Key={3}
                                          addedClass=""
                                          title=""
                            >
                                          Submission Date
                            </Cell>
                            <Cell
                                          Key={4}
                                          addedClass=""
                                          title=""
                            >
                                          Review Date
                            </Cell>
                            <Cell
                                          Key={5}
                                          addedClass=""
                                          title=""
                            >
                                          Score
                            </Cell>
              </Row>
</Table>,
            "className": "lms-table",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <Row
                  header={true}
>
                  <Cell
                                    Key={0}
                                    addedClass=""
                                    title=""
                  >
                                    Course Id
                  </Cell>
                  <Cell
                                    Key={1}
                                    addedClass=""
                                    title=""
                  >
                                    Output Name
                  </Cell>
                  <Cell
                                    Key={2}
                                    addedClass=""
                                    title=""
                  >
                                    Due Date
                  </Cell>
                  <Cell
                                    Key={3}
                                    addedClass=""
                                    title=""
                  >
                                    Submission Date
                  </Cell>
                  <Cell
                                    Key={4}
                                    addedClass=""
                                    title=""
                  >
                                    Review Date
                  </Cell>
                  <Cell
                                    Key={5}
                                    addedClass=""
                                    title=""
                  >
                                    Score
                  </Cell>
</Row>,
                undefined,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": Array [
                    <Cell
                      Key={0}
                      addedClass=""
                      title=""
>
                      Course Id
</Cell>,
                    <Cell
                      Key={1}
                      addedClass=""
                      title=""
>
                      Output Name
</Cell>,
                    <Cell
                      Key={2}
                      addedClass=""
                      title=""
>
                      Due Date
</Cell>,
                    <Cell
                      Key={3}
                      addedClass=""
                      title=""
>
                      Submission Date
</Cell>,
                    <Cell
                      Key={4}
                      addedClass=""
                      title=""
>
                      Review Date
</Cell>,
                    <Cell
                      Key={5}
                      addedClass=""
                      title=""
>
                      Score
</Cell>,
                  ],
                  "header": true,
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "Key": 0,
                      "addedClass": "",
                      "children": "Course Id",
                      "title": "",
                    },
                    "ref": null,
                    "rendered": "Course Id",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "Key": 1,
                      "addedClass": "",
                      "children": "Output Name",
                      "title": "",
                    },
                    "ref": null,
                    "rendered": "Output Name",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "Key": 2,
                      "addedClass": "",
                      "children": "Due Date",
                      "title": "",
                    },
                    "ref": null,
                    "rendered": "Due Date",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "Key": 3,
                      "addedClass": "",
                      "children": "Submission Date",
                      "title": "",
                    },
                    "ref": null,
                    "rendered": "Submission Date",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "Key": 4,
                      "addedClass": "",
                      "children": "Review Date",
                      "title": "",
                    },
                    "ref": null,
                    "rendered": "Review Date",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "Key": 5,
                      "addedClass": "",
                      "children": "Score",
                      "title": "",
                    },
                    "ref": null,
                    "rendered": "Score",
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              undefined,
            ],
            "type": [Function],
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`tests the LmsTable renders correctly 4`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LmsTable
    lmsSubmissions={
        Object {
            "data": Object {
              "outputs": Object {},
            },
          }
    }
    loading={true}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <div
          className="lms-table"
>
          <Table>
                    <Row
                              header={true}
                    >
                              <Cell
                                        Key={0}
                                        addedClass=""
                                        title=""
                              >
                                        Course Id
                              </Cell>
                              <Cell
                                        Key={1}
                                        addedClass=""
                                        title=""
                              >
                                        Output Name
                              </Cell>
                              <Cell
                                        Key={2}
                                        addedClass=""
                                        title=""
                              >
                                        Due Date
                              </Cell>
                              <Cell
                                        Key={3}
                                        addedClass=""
                                        title=""
                              >
                                        Submission Date
                              </Cell>
                              <Cell
                                        Key={4}
                                        addedClass=""
                                        title=""
                              >
                                        Review Date
                              </Cell>
                              <Cell
                                        Key={5}
                                        addedClass=""
                                        title=""
                              >
                                        Score
                              </Cell>
                    </Row>
          </Table>
</div>,
        <Loader />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Table>
            <Row
                        header={true}
            >
                        <Cell
                                    Key={0}
                                    addedClass=""
                                    title=""
                        >
                                    Course Id
                        </Cell>
                        <Cell
                                    Key={1}
                                    addedClass=""
                                    title=""
                        >
                                    Output Name
                        </Cell>
                        <Cell
                                    Key={2}
                                    addedClass=""
                                    title=""
                        >
                                    Due Date
                        </Cell>
                        <Cell
                                    Key={3}
                                    addedClass=""
                                    title=""
                        >
                                    Submission Date
                        </Cell>
                        <Cell
                                    Key={4}
                                    addedClass=""
                                    title=""
                        >
                                    Review Date
                        </Cell>
                        <Cell
                                    Key={5}
                                    addedClass=""
                                    title=""
                        >
                                    Score
                        </Cell>
            </Row>
</Table>,
          "className": "lms-table",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <Row
                header={true}
>
                <Cell
                                Key={0}
                                addedClass=""
                                title=""
                >
                                Course Id
                </Cell>
                <Cell
                                Key={1}
                                addedClass=""
                                title=""
                >
                                Output Name
                </Cell>
                <Cell
                                Key={2}
                                addedClass=""
                                title=""
                >
                                Due Date
                </Cell>
                <Cell
                                Key={3}
                                addedClass=""
                                title=""
                >
                                Submission Date
                </Cell>
                <Cell
                                Key={4}
                                addedClass=""
                                title=""
                >
                                Review Date
                </Cell>
                <Cell
                                Key={5}
                                addedClass=""
                                title=""
                >
                                Score
                </Cell>
</Row>,
              Array [],
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  <Cell
                    Key={0}
                    addedClass=""
                    title=""
>
                    Course Id
</Cell>,
                  <Cell
                    Key={1}
                    addedClass=""
                    title=""
>
                    Output Name
</Cell>,
                  <Cell
                    Key={2}
                    addedClass=""
                    title=""
>
                    Due Date
</Cell>,
                  <Cell
                    Key={3}
                    addedClass=""
                    title=""
>
                    Submission Date
</Cell>,
                  <Cell
                    Key={4}
                    addedClass=""
                    title=""
>
                    Review Date
</Cell>,
                  <Cell
                    Key={5}
                    addedClass=""
                    title=""
>
                    Score
</Cell>,
                ],
                "header": true,
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "Key": 0,
                    "addedClass": "",
                    "children": "Course Id",
                    "title": "",
                  },
                  "ref": null,
                  "rendered": "Course Id",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "Key": 1,
                    "addedClass": "",
                    "children": "Output Name",
                    "title": "",
                  },
                  "ref": null,
                  "rendered": "Output Name",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "Key": 2,
                    "addedClass": "",
                    "children": "Due Date",
                    "title": "",
                  },
                  "ref": null,
                  "rendered": "Due Date",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "Key": 3,
                    "addedClass": "",
                    "children": "Submission Date",
                    "title": "",
                  },
                  "ref": null,
                  "rendered": "Submission Date",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "Key": 4,
                    "addedClass": "",
                    "children": "Review Date",
                    "title": "",
                  },
                  "ref": null,
                  "rendered": "Review Date",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "Key": 5,
                    "addedClass": "",
                    "children": "Score",
                    "title": "",
                  },
                  "ref": null,
                  "rendered": "Score",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <div
            className="lms-table"
>
            <Table>
                        <Row
                                    header={true}
                        >
                                    <Cell
                                                Key={0}
                                                addedClass=""
                                                title=""
                                    >
                                                Course Id
                                    </Cell>
                                    <Cell
                                                Key={1}
                                                addedClass=""
                                                title=""
                                    >
                                                Output Name
                                    </Cell>
                                    <Cell
                                                Key={2}
                                                addedClass=""
                                                title=""
                                    >
                                                Due Date
                                    </Cell>
                                    <Cell
                                                Key={3}
                                                addedClass=""
                                                title=""
                                    >
                                                Submission Date
                                    </Cell>
                                    <Cell
                                                Key={4}
                                                addedClass=""
                                                title=""
                                    >
                                                Review Date
                                    </Cell>
                                    <Cell
                                                Key={5}
                                                addedClass=""
                                                title=""
                                    >
                                                Score
                                    </Cell>
                        </Row>
            </Table>
</div>,
          <Loader />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Table>
              <Row
                            header={true}
              >
                            <Cell
                                          Key={0}
                                          addedClass=""
                                          title=""
                            >
                                          Course Id
                            </Cell>
                            <Cell
                                          Key={1}
                                          addedClass=""
                                          title=""
                            >
                                          Output Name
                            </Cell>
                            <Cell
                                          Key={2}
                                          addedClass=""
                                          title=""
                            >
                                          Due Date
                            </Cell>
                            <Cell
                                          Key={3}
                                          addedClass=""
                                          title=""
                            >
                                          Submission Date
                            </Cell>
                            <Cell
                                          Key={4}
                                          addedClass=""
                                          title=""
                            >
                                          Review Date
                            </Cell>
                            <Cell
                                          Key={5}
                                          addedClass=""
                                          title=""
                            >
                                          Score
                            </Cell>
              </Row>
</Table>,
            "className": "lms-table",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <Row
                  header={true}
>
                  <Cell
                                    Key={0}
                                    addedClass=""
                                    title=""
                  >
                                    Course Id
                  </Cell>
                  <Cell
                                    Key={1}
                                    addedClass=""
                                    title=""
                  >
                                    Output Name
                  </Cell>
                  <Cell
                                    Key={2}
                                    addedClass=""
                                    title=""
                  >
                                    Due Date
                  </Cell>
                  <Cell
                                    Key={3}
                                    addedClass=""
                                    title=""
                  >
                                    Submission Date
                  </Cell>
                  <Cell
                                    Key={4}
                                    addedClass=""
                                    title=""
                  >
                                    Review Date
                  </Cell>
                  <Cell
                                    Key={5}
                                    addedClass=""
                                    title=""
                  >
                                    Score
                  </Cell>
</Row>,
                Array [],
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": Array [
                    <Cell
                      Key={0}
                      addedClass=""
                      title=""
>
                      Course Id
</Cell>,
                    <Cell
                      Key={1}
                      addedClass=""
                      title=""
>
                      Output Name
</Cell>,
                    <Cell
                      Key={2}
                      addedClass=""
                      title=""
>
                      Due Date
</Cell>,
                    <Cell
                      Key={3}
                      addedClass=""
                      title=""
>
                      Submission Date
</Cell>,
                    <Cell
                      Key={4}
                      addedClass=""
                      title=""
>
                      Review Date
</Cell>,
                    <Cell
                      Key={5}
                      addedClass=""
                      title=""
>
                      Score
</Cell>,
                  ],
                  "header": true,
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "Key": 0,
                      "addedClass": "",
                      "children": "Course Id",
                      "title": "",
                    },
                    "ref": null,
                    "rendered": "Course Id",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "Key": 1,
                      "addedClass": "",
                      "children": "Output Name",
                      "title": "",
                    },
                    "ref": null,
                    "rendered": "Output Name",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "Key": 2,
                      "addedClass": "",
                      "children": "Due Date",
                      "title": "",
                    },
                    "ref": null,
                    "rendered": "Due Date",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "Key": 3,
                      "addedClass": "",
                      "children": "Submission Date",
                      "title": "",
                    },
                    "ref": null,
                    "rendered": "Submission Date",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "Key": 4,
                      "addedClass": "",
                      "children": "Review Date",
                      "title": "",
                    },
                    "ref": null,
                    "rendered": "Review Date",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "Key": 5,
                      "addedClass": "",
                      "children": "Score",
                      "title": "",
                    },
                    "ref": null,
                    "rendered": "Score",
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
